# mini

./: .gitignore  Dockerfile  README.md  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  start.sh  tasks.json  tasks.py
hey-mini_en_windows_v4_0_0/: hey-mini_en_windows_v4_0_0.ppn
mini/: .env  automation_operations.py  main.py  openenv_env.py
mini/actions/: app_func.py  operations.py
mini/audio/: listener.py  speech_to_text.py  vad.py  wake_word_detection.py
mini/commands/: normalizer.py  parser.py
mini/core/: router.py  state.py
mini/ui/: popup.py  tray.py
server/: app.py
