[project]
name = "mini-productivity-openenv"
version = "0.1.0"
description = "Voice assistant RL environment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "pyautogui",
    "python-xlib",
    "psutil",
    "openenv",
]

[project.scripts]
# This tells the validator how to launch your app
server = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build_meta"